--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -50,9 +50,12 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary" id="buy" onclick="emptyCart()">Checkout</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <form action="{{ url_for('emptyCart') }}" method="POST">
+                <button type="submit" class="btn btn-primary" id="buy">Checkout</button>
+            </form>
         </div>
+        
       </div>
     </div>
   </div>
